--- a/src/styles/ordershistory.css
+++ b/src/styles/ordershistory.css
@@ -17,10 +17,11 @@ h2 {
 /* Order Grid */
 .order-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   padding: 20px;
   max-width: 1200px;
+  /* in an grid, max width is how many items can fit inside that grid */
   margin: 0 auto; /* Center the grid container */
 }
 
